subnets.tf
# Create subnet
resource "azurerm_subnet" "subnet" {
    name                 = "JenkinsSubnet"
    resource_group_name  = "${azurerm_resource_group.myterraformgroup.name}"
    virtual_network_name = "${azurerm_virtual_network.myterraformnetwork.name}"
    address_prefix       = "10.0.1.0/24"
}
